@@ -1,3 +1,7 @@
+2007-02-28  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* configure.tgt (sh-*-uclinux, sh[12]-*-uclinux): Specify as elf.
+
 2007-02-28  Nick Clifton  <nickc@redhat.com>
 
 	PR gas/2623
