@@ -1,3 +1,11 @@
+2007-02-28  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* Makefile.am (ALL_EMULATIONS): Add eshelf_uclinux.o
+	(eshelf_uclinux.c): New target.
+	* Makefile.in: Rebuilt.
+	* configure.tgt (sh-*-uclinux* | sh[12]-*-uclinux*): New stanza.
+	* emulparams/shelf_uclinux.sh: New.
+
 2007-02-28  Alan Modra  <amodra@bigpond.net.au>
 
 	* configure.tgt: Fix type last change.
